src-tauri/tests/snapshots/agent_stream_event_wire__wire_format_deferred_tool_use.snap
---
source: tests/agent_stream_event_wire.rs
expression: "to_value(AgentStreamEvent::DeferredToolUse\n{\n    provider: \"claude\".into(), model_id: \"opus-1m\".into(), resolved_model:\n    \"claude-opus-4-20250514\".into(), session_id:\n    Some(\"provider-session-1\".into()), working_directory:\n    \"/tmp/kmor\".into(), permission_mode: Some(\"default\".into()),\n    tool_use_id: \"tool-1\".into(), tool_name: \"AskUserQuestion\".into(),\n    tool_input: json!({ \"question\": \"Pick one\" }),\n})"
---
kind: deferredToolUse
model_id: opus-1m
permission_mode: default
provider: claude
resolved_model: claude-opus-4-20250514
session_id: provider-session-1
toolInput:
  question: Pick one
toolName: AskUserQuestion
toolUseId: tool-1
working_directory: /tmp/kmor
