src-tauri/tests/snapshots/agent_stream_event_wire__wire_format_elicitation_request.snap
---
source: tests/agent_stream_event_wire.rs
expression: "to_value(AgentStreamEvent::ElicitationRequest\n{\n    provider: \"claude\".into(), model_id: \"opus-1m\".into(), resolved_model:\n    \"claude-opus-4-20250514\".into(), session_id:\n    Some(\"provider-session-1\".into()), working_directory:\n    \"/tmp/kmor\".into(), elicitation_id: Some(\"elicitation-1\".into()),\n    server_name: \"design-server\".into(), message:\n    \"Need structured input\".into(), mode: Some(\"form\".into()), url: None,\n    requested_schema:\n    Some(json!({\n        \"type\": \"object\", \"properties\": { \"name\": { \"type\": \"string\" } },\n        \"required\": [\"name\"]\n    })),\n})"
---
elicitationId: elicitation-1
kind: elicitationRequest
message: Need structured input
mode: form
model_id: opus-1m
provider: claude
requestedSchema:
  properties:
    name:
      type: string
  required:
    - name
  type: object
resolved_model: claude-opus-4-20250514
serverName: design-server
session_id: provider-session-1
url: ~
working_directory: /tmp/kmor
